# redset

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
src/: .gitignore  Makefile.am  __init__.py  redset.in  redshift.py
